--- a/index.html
+++ b/index.html
@@ -78,10 +78,12 @@
 
   <h4 id="scrollspyHeading2">Models</h4>
   <p>=======</p>
+
 <!-- card 1 -->
-  <div class="container">
+
+  <div class="container-fluet mt-5 p-5">
     <div class="row">
-      <div class="col-lg-2 col-md-4 col-sm-12 ">
+      <div class="col-lg-4 col-md-8 col-sm-12 ">
         <div class="card m-5 m-sm-5 m-lg-0" style="width: 18rem;">
     <img src="img/mini 1.png" class="card-img-top" alt="...">
     <div class="card-body">
@@ -93,12 +95,8 @@
     </div>
      </div>
   </div>
-  </div>
-  </div>
 <!-- card 2 -->
-<div class="container">
-  <div class="row">
-    <div class="col-lg-2 col-md-4 col-sm-12 ">
+<div class="col-lg-4 col-md-8 col-sm-12 ">
       <div class="card m-5 m-sm-5 m-lg-0" style="width: 18rem;">
   <img src="img/mini 2.webp" class="card-img-top" alt="...">
   <div class="card-body">
@@ -111,12 +109,8 @@
   </div>
    </div>
 </div>
-</div>
-</div>
 <!-- card 3 -->
-<div class="container">
-  <div class="row">
-    <div class="col-lg-2 col-md-4 col-sm-12 ">
+  <div class="col-lg-4 col-md-8 col-sm-12">
       <div class="card m-5 m-sm-5 m-lg-0" style="width: 18rem;">
   <img src="img/mini 3.avif" class="card-img-top" alt="...">
   <div class="card-body">
@@ -128,12 +122,12 @@
   </div>
    </div>
 </div>
-</div>
-</div>
+  </div>
+  </div>
 <!-- card 4 -->
-<div class="container">
+<div class="container-fluet mt-5 p-5">
   <div class="row">
-    <div class="col-lg-2 col-md-4 col-sm-12 ">
+    <div class="col-lg-4 col-md-8 col-sm-12 ">
       <div class="card m-5 m-sm-5 m-lg-0" style="width: 18rem;">
   <img src="img/mini 4.png" class="card-img-top" alt="...">
   <div class="card-body">
@@ -145,12 +139,8 @@
   </div>
    </div>
 </div>
-</div>
-</div>
 <!-- card 5 -->
-<div class="container">
-  <div class="row">
-    <div class="col-lg-2 col-md-4 col-sm-12 ">
+  <div class="col-lg-4 col-md-8 col-sm-12 ">
       <div class="card m-5 m-sm-5 m-lg-0" style="width: 18rem;">
   <img src="img/mini 5.jpg" class="card-img-top" alt="...">
   <div class="card-body">
@@ -163,13 +153,9 @@
     <a href="https://www.porsche.com/pap/_sri-lanka_/models/macan/" class="card-link">Build your own</a>
   </div>
    </div>
-</div>
-</div>
-</div>
+  </div>
 <!-- card 6 -->
-<div class="container">
-  <div class="row">
-    <div class="col-lg-2 col-md-4 col-sm-12 ">
+  <div class="col-lg-4 col-md-8 col-sm-12 ">
       <div class="card m-5 m-sm-5 m-lg-0" style="width: 18rem;">
   <img src="img/mini 6.jpg" class="card-img-top" alt="...">
   <div class="card-body">
@@ -181,8 +167,7 @@
   </div>
    </div>
 </div>
-</div>
-</div>
+
 
 
 
